--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React app bootstrapped with @bercivarga's configuration</title>
+    <title>Adoptapet &mdash; Find your new buddy with us!</title>
   </head>
-  <body>
+  <body class="body-lightgreen dark:body-darkgreen">
     <div id="root"></div>
     <script src="App.tsx"></script>
   </body>
