Move index.css to the html

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adoptapet &mdash; Find your new buddy with us!</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body class="body-lightgreen dark:body-darkgreen">
     <div id="root"></div>
