--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Adoptapet &mdash; Find your new buddy with us!</title>
     <link rel="stylesheet" href="index.css" />
   </head>
-  <body class="bg-white dark:bg-gray-800">
+  <body>
     <div id="root"></div>
     <script src="App.tsx"></script>
   </body>
